--- a/myProject/Templates/index.html
+++ b/myProject/Templates/index.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="{% static 'collapse navbar-collapse' %}" id="travel-navbar">
+            <div class="collapse navbar-collapse" id="travel-navbar">
                 <ul class="navbar-nav ml-auto">
                     <li class="{% static 'nav-item px-3' %}">
                         <a href="#home" class="nav-link">Home</a>
