--- a/myProject/Templates/index.html
+++ b/myProject/Templates/index.html
@@ -343,6 +343,19 @@
         </div>
     </section>
 
+     <!-- Main Footer -->
+     <footer class="p-3 mt-3 bg-teal text-white text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>Copyright &copy; 2021 , Travel Yaari Pvt Ltd</h3>
+                    <h6>All Rights Reserved</h6>
+                    <h6>Developed & Maintained by WAD Group 38</h6>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 <!-- Bootstrap Js files -->
 <script src="{% static 'bootstrap/js/jquery.js' %}"></script>
 <script src="{% static 'bootstrap/js/popper.min.js' %}"></script>
