--- a/myProject/Templates/signup.html
+++ b/myProject/Templates/signup.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,12 +11,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/nav1.css">
-    <link rel="stylesheet" href="{% static '../CSS/signup.css' %}">
-    <link rel="stylesheet" href="{% static '../CSS/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'CSS/signup.css' %}">
     <style>
         body {
-            background-image: url(../Images/signup/bg.jpg);
+            background-image: url('{% static "/images/signup/bg.jpg"%}');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -26,12 +23,6 @@
 </head>
 
 <body>
-    <div id="navigation"></div>
-    <script>
-        $(document).ready(function () {
-            $('#navigation').load("nav0.html");
-        });
-    </script>
     <div class="row display-flex">
         <div class="col-sm-6 col-xs-6 col-md-4 col-md-offset-4" id="signup-intro-form">
             <form action="signup" id="signup-form" class="signup-form" method="post">
@@ -86,15 +77,6 @@
         </div>
     </div>
     </div>
-    <div id="foot"></div>
-    <script src="../JS/signup.js "></script>
-    <script src="/WAD_Project/bootstrap/js/app.js"></script>
-    <script>
-        $(document).ready(function () {
-
-            $('#foot').load("footer.html");
-
-        });
     </script>
 
 </body>
