--- a/myProject/Templates/login.html
+++ b/myProject/Templates/login.html
@@ -17,7 +17,7 @@
 
       <style>
 body {
-  background-image: url(../Images/signup/bg.jpg);
+  background-image: url('{% static "/images/signup/bg.jpg"%}');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
@@ -26,14 +26,6 @@ body {
 </head>
 
 <body>
-    <div id="navigation"></div>
-    <script>
-        $(document).ready(function() {
-
-            $('#navigation').load("nav0.html");
-
-        });
-    </script>
     <div class="container">
         <div class="row display-flex">
             <div class="col-sm-6 col-xs-6 col-md-4 col-md-offset-4" id="login-intro-form">
