--- a/myProject/Templates/signup.html
+++ b/myProject/Templates/signup.html
@@ -1,20 +1,24 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Signup | TravelYaari</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'CSS/signup.css' %}">
+    <link rel="stylesheet" href="../CSS/nav1.css">
+    <link rel="stylesheet" href="{% static '/CSS/signup.css' %}">
     <style>
         body {
-            background-image: url('{% static "/images/signup/bg.jpg"%}');
+            background-image: url('{% static "/Images/signup/bg.jpg" %}');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -23,6 +27,7 @@
 </head>
 
 <body>
+    </script>
     <div class="row display-flex">
         <div class="col-sm-6 col-xs-6 col-md-4 col-md-offset-4" id="signup-intro-form">
             <form action="signup" id="signup-form" class="signup-form" method="post">
@@ -77,6 +82,15 @@
         </div>
     </div>
     </div>
+    <div id="foot"></div>
+    <script src="../JS/signup.js "></script>
+    <script src="/WAD_Project/bootstrap/js/app.js"></script>
+    <script>
+        $(document).ready(function () {
+
+            $('#foot').load("footer.html");
+
+        });
     </script>
 
 </body>
