--- a/myProject/Templates/index.html
+++ b/myProject/Templates/index.html
@@ -42,12 +42,18 @@
                     <li class="{% static 'nav-item px-3' %}">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="{% static 'nav-item px-3' %}"><a href="accounts/logout"class="nav-link" >logout</a></li>
+                    <a href="" class="navbar-brand"  ><li class="{% static 'nav-item px-3' %}"></li>
+                      Hello {{user.first_name}}</a>
+                    {% else%}
                     <li class="{% static 'nav-item px-3'">
                         <a href="accounts/signup" class="nav-link">Register</a>
                     </li>
                     <li class="{% static 'nav-item px-3'">
                         <a href="accounts/login" class="nav-link">Login</a>
                     </li>
+                   {% endif %}
                 </ul>
             </div>
         </div>
