--- a/myProject/Templates/login.html
+++ b/myProject/Templates/login.html
@@ -10,9 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/nav1.css">
-    <link rel="stylesheet" href="../CSS/login.css">
-    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="{% static '/CSS/login.css' %}">
     <title>Login | TravelYaari</title>
 
       <style>
@@ -31,7 +29,7 @@ body {
             <div class="col-sm-6 col-xs-6 col-md-4 col-md-offset-4" id="login-intro-form">
                 <h1 class="text-center login-login-title">Hello Traveller</h1>
                 <div class="login-account-wall">
-                    <img class="login-profile-img" src="../Images/login/avatar.png" alt="">
+                    <img class="login-profile-img" src="{% static '/Images/login/avatar.png' %}" alt="">
                     <form class="login-form-signin" action="login" method="POST">
 
                                             {% csrf_token %}
